package WebSchedule.Program.Model;
/**
 * Интерефейс для Таблиц БД
 * @version 1.0
 */
public interface Entity {
    /**
     * Функция вывода Класса
     * @return String {@link String}
     */

    public String getType();
}
